# authenticator-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  meson.build
.github/workflows/: release.yml  rust.yml
build-aux/arch/authenticator-rs-bin/: PKGBUILD
build-aux/debian/: control  postinst
build-aux/migrations/: V1__initial.sql  V2__url.sql  V3__secret_service.sql  V4__collapsed.sql
data/: style.css  uk.co.grumlimited.authenticator-rs.appdata.xml  uk.co.grumlimited.authenticator-rs.desktop  uk.co.grumlimited.authenticator-rs.gschema.xml  uk.co.grumlimited.authenticator-rs.xml
data/arch/authenticator-rs/: PKGBUILD  authenticator-rs.install
data/arch/authenticator-rs-bin/: PKGBUILD
data/deb/: control  postinst
data/resources/: log4rs.yaml  style.css
data/resources/gtk/ui/: account.ui  account_group.ui  action_menu.ui  error_popup.ui  main.ui  system_menu.ui
data/resources/ui/: main.ui
data/ui/: account.ui  account_group.ui  error_popup.ui  export_account_error.ui  main.ui  system_menu.ui
po/: POTFILES.in  en_GB.po  fr.po
src/: exporting.rs  main.rs  main_window.rs  mainwindow.glade  state.rs
src/helpers/: backup.rs  config_manager.rs  database.rs  every.rs  fonts.rs  icon_parser.rs  icons.rs  keyring.rs  migrations.rs  mod.rs  paths.rs  qr_code.rs  repository_error.rs  secret_service.rs
src/model/: account.rs  account_errors.rs  account_group.rs  mod.rs
src/resources/: log4rs.yaml-example  style.css
src/ui/: account.rs  account_group.rs  account_group_views.rs  account_views.rs  accounts_window.rs  add_group.rs  authenticator.rs  edit_account_window.rs  error_display.rs  form_errors.rs  menu.rs  mod.rs  no_accounts.rs
