[package]
name = "authenticator-rs"
version = "0.0.1"
license = "GPL-3,0-or-later"
description = "authenticator-rs"
readme = "README.md"
homepage = "https://github.com/grumlimited/authenticator-rs/"
repository = "https://github.com/grumlimited/authenticator-rs/"
authors = ["Romain Gallet <romain.gallet at gmail com>"]
edition = "2021"

[dependencies]
anyhow = "1"
async-channel = "2.2"
base32 = "0"
bytes = "1"
chrono = "0"
curl = "0"
directories = "5"
futures = {version = "0", features = ["thread-pool"]}
gdk = "0.18"
gdk-pixbuf = "0.19"
gettext-rs = {version = "0", features = ["gettext-system"]}
gio = "0.19"
gtk-macros = "0.3"
glib-macros = "0.19"
google_authenticator_converter = "0.2.0"
image = "0"
log = "0"
log4rs = "1"
refinery = { version = "0", features = ["rusqlite"]}
regex = "1"
rqrr = "0"
rusqlite = "0"
scraper = "0"
secret-service = { version = "3", features = ["rt-tokio-crypto-rust"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
strum = "0"
strum_macros = "0"
tempfile-fast = "0"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread",  "macros"] }
totp-rs = "5"
uuid = { version = "1", features = ["v4"] }

[dependencies.gtk]
version = "0.18"
features = ["v3_24"]

[dependencies.glib]
version = "0.19"

[dev-dependencies]
async-std = {version = "1", features = [] }
